View Issue Details

IDProjectCategoryView StatusLast Update
0028064Open CASCADEOCCT:Samplespublic2016-12-09 16:39
ReporterskiAssigned Toapn  
PriorityhighSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version7.1.0 
Target Version7.1.0Fixed in Version7.1.0 
Summary0028064: Samples - Raytracing does not work in Qt samples
DescriptionRaytracing does not work in Qt samples
Steps To Reproduce• Import any shape
• Turn ON raytracing
TagsNo tags attached.
Test case numberNot needed

Attached Files

  • 7.0_Raytracing.jpg (41,436 bytes)
  • Master_Raytracing.jpg (27,292 bytes)

Activities

ski

2016-11-07 19:57

developer  

7.0_Raytracing.jpg (41,436 bytes)

ski

2016-11-07 19:57

developer  

Master_Raytracing.jpg (27,292 bytes)

duv

2016-11-08 12:57

developer   ~0059997

In IESample QAction::triggered() signal should be used instead of QAction::activated() since activated() is part of the Qt3 support layer and seems to be dropped in recent Qt versions.

kgv

2016-11-08 12:59

developer   ~0059998

Dear Sergey,

please try suggestion concerning QAction.

git

2016-11-08 14:58

administrator   ~0060023

Branch CR28064 has been created by ski.

SHA-1: 759f92080a5c654e590c93fe230c67c75fccbe4c


Detailed log of new commits:

Author: ski
Date: Tue Nov 8 14:57:46 2016 +0300

    0028064: Samples - Raytracing does not work in Qt samples
    
    QAction signal activated() was changed to signal triggered() to support Qt5.

ski

2016-11-08 15:01

developer   ~0060024

Using of out-of-date signal activated() was eliminated.

I have checked working of sample using Qt 4.8.6 and 5.6.1.

Please, review.

kgv

2016-11-08 15:09

developer   ~0060025

I'm no a Qt expert here - should be OK if it works.

apv

2016-11-09 12:01

tester   ~0060092

Tested in scope of CR0-IR-2016-11-08

git

2016-12-07 11:31

administrator   ~0061273

Branch CR28064 has been deleted by kgv.

SHA-1: 759f92080a5c654e590c93fe230c67c75fccbe4c

Related Changesets

occt: master a1565817

2016-11-08 11:57:46

ski


Committer: apn Details Diff
0028064: Samples - Raytracing does not work in Qt samples

QAction signal activated() was changed to signal triggered() to support Qt5.
Affected Issues
0028064
mod - samples/qt/Common/src/ApplicationCommon.cxx Diff File
mod - samples/qt/Common/src/View.cxx Diff File

Issue History

Date Modified Username Field Change
2016-11-07 19:57 ski New Issue
2016-11-07 19:57 ski Assigned To => abv
2016-11-07 19:57 ski File Added: 7.0_Raytracing.jpg
2016-11-07 19:57 ski File Added: Master_Raytracing.jpg
2016-11-08 11:00 kgv Assigned To abv => dbp
2016-11-08 11:00 kgv Priority normal => high
2016-11-08 11:00 kgv Status new => assigned
2016-11-08 11:00 kgv Product Version => 7.1.0
2016-11-08 11:00 kgv Target Version 7.2.0 => 7.1.0
2016-11-08 12:57 duv Note Added: 0059997
2016-11-08 12:59 kgv Note Added: 0059998
2016-11-08 12:59 kgv Assigned To dbp => ski
2016-11-08 14:58 git Note Added: 0060023
2016-11-08 15:01 ski Note Added: 0060024
2016-11-08 15:01 ski Assigned To ski => kgv
2016-11-08 15:01 ski Status assigned => resolved
2016-11-08 15:09 kgv Note Added: 0060025
2016-11-08 15:09 kgv Assigned To kgv => bugmaster
2016-11-08 15:09 kgv Status resolved => reviewed
2016-11-09 12:01 apv Test case number => Not needed
2016-11-09 12:01 apv Note Added: 0060092
2016-11-09 12:01 apv Status reviewed => tested
2016-11-09 17:43 apn Changeset attached => occt master a1565817
2016-11-09 17:43 apn Assigned To bugmaster => apn
2016-11-09 17:43 apn Status tested => verified
2016-11-09 17:43 apn Resolution open => fixed
2016-12-07 11:31 git Note Added: 0061273
2016-12-09 16:29 aiv Status verified => closed
2016-12-09 16:39 aiv Fixed in Version => 7.1.0