0028064: Samples - Raytracing does not work in Qt samples

QAction signal activated() was changed to signal triggered() to support Qt5.